2003-12-09  Andrew Wu <Yang.Wu@sun.com>

	* calendar/Makefile.am: add entries for new source files
	* calendar/ea-calendar-helpers.c: add cases for jump button.
	* calendar/ea-calendar.c: add cases for week view and week view main item.
	* calendar/ea-jump-button.c: new impl.
	* calendar/ea-week-view-cell.c: new impl.
	* calendar/ea-week-view-main-item.c: new impl.
	* calendar/ea-week-view.c: add main item as first child.
	
2003-12-05  Bolian Yin <bolian.yin@sun.com>
                                                                                
        * calendar/ea-cal-view-event.c (ea_cal_view_event_new): shortcut when cal_view is NULL.
        * calendar/ea-cal-view.c: Change an action name.
        * calendar/ea-calendar.c (ea_calendar_focus_watcher): add check for event atk object.
        * calendar/ea-week-view.c (ea_week_view_get_n_children): correct impl.
          (get_visible_text_item_count): removed.
                                                                                
2003-12-06  JP Rosevear <jpr@ximian.com>

	* */Makefile.am: Remove hard coded disable deprecated flags
	
2003-12-03  Ettore Perazzoli  <ettore@ximian.com>

	* calendar/Makefile.am (SHELL_IDLS): Only get Evolution.idl.

2003-11-11  Bolian Yin <bolian.yin@sun.com>
                                                                                
        Fixes #50538
                                                                                
        * new files:
                widgets/ea-calendar-cell.[hc]
                                                                                
        * widgets/ea-calendar-item: impl. atk selection and atk table interface.        

	* widgets/Makefile.am : use shared object library (.so)
                                                                                
2003-11-07  JP Rosevear <jpr@ximian.com>

	* calendar/Makefile.am (INCLUDES): don't include toplevel libical
	
2003-11-07  JP Rosevear <jpr@ximian.com>
