@@ -64,8 +64,6 @@ gboolean e_calendar_item_get_date_for_offset (ECalendarItem *calitem,
 					      gint day_offset,
 					      gint *year, gint *month,
 					      gint *day);
-gint e_calendar_item_get_offset_for_date (ECalendarItem *calitem,
-					  gint year, gint month, gint day);
 gint e_calendar_item_get_n_days_from_week_start (ECalendarItem *calitem,
 						 gint year, gint month);
 
